--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     --clr-lower: #1F2937;
     --clr-primary: #fff;
     --clr-secondary: #CCC1FF;
+    --clr-border: #B295FF;
 
 }
 * {
@@ -16,5 +17,70 @@
 
 body {
     font-family: "Inter", sans-serif;
-    
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    color: var(--clr-primary)
+}
+
+header {
+    background: var(--clr-upper);
+    height: 45vh;
+    width: 100vw;
+}
+
+h1 {
+    font-size: 25px;
+    line-height: 38px;
+    padding: 2rem 0;
+}
+
+.input-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+input {
+    width: 6rem; 
+    height: 4.5rem;
+    background: inherit;
+    border: 2px solid var(--clr-border);
+    border-radius: 5px;
+
+    outline: none;
+    font-family: inherit;
+    text-align: center;
+    font-size: 3rem;
+    font-weight: 800;
+    color: var(--clr-primary);
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+.convert-btn {
+    width: 6rem;
+    height: 2rem;
+    margin-top: 1.5rem;
+    margin-bottom: 2rem;
+
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 0.8rem;
+    color: #3D3D3D;
+
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+    border: none;
+    border-radius: 5px;
 }
