--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     --clr-primary: #fff;
     --clr-secondary: #CCC1FF;
     --clr-border: #B295FF;
-
+    --clr-section: #273549;
 }
 * {
     margin: 0;
@@ -25,7 +25,6 @@ body {
 
 header {
     background: var(--clr-upper);
-    height: 45vh;
     width: 100vw;
 }
 
@@ -80,7 +79,34 @@ input[type=number] {
     font-size: 0.8rem;
     color: #3D3D3D;
 
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
     border: none;
     border-radius: 5px;
+}
+
+main {
+    background: var(--clr-lower);
+    width: 100vw;
+    padding: 2rem 0.8rem;
+}
+
+section {
+    margin: 1.5rem;
+    background: var(--clr-section);
+    height: 6rem;
+    border-radius: 5px 0px 0px 0px;
+}
+
+h3 {
+    font-weight: 600;
+    font-size: 1rem;
+    color: var(--clr-secondary);  
+
+    padding-top: 1.5rem;
+    padding-bottom: 0.8rem;
+}
+
+p {
+    font-size: 0.7rem;
+    height: 1.5rem;
 }
