--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ input {
     outline: none;
     font-family: inherit;
     text-align: center;
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: 800;
     color: var(--clr-primary);
 }
@@ -83,6 +83,8 @@ input[type=number] {
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
     border: none;
     border-radius: 5px;
+
+    cursor: pointer;
 }
 
 main {
