Update bg color

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap");
 
 :root {
-    --clr-bg: #1C1C1C;
+    --clr-bg: #111;
     --clr-upper: #6943FF;
     --clr-lower: #1F2937;
     --clr-primary: #FFF;
